Progress on SB webview implementation